--- a/intex.html
+++ b/intex.html
@@ -14,7 +14,7 @@
         <br><H3>  Day 0 
         </H3>
 
-        <img src= "day 0 doodl(1).jpg" 
+        <img src= "day 0 doodl.jpg" 
         width="400" 
         height="500"/>
 
