--- a/intex.html
+++ b/intex.html
@@ -23,7 +23,7 @@
         
        <body>
                     <br><H3><P><i>1/9/22</i></H3>
-                    On the left I decided to study muscle anatomy <i>(top left)</i> along as physical perspective. I got very frusturated during the process that I wanted to fucking flip the table. Incredibly annoying when your so hyperfocused and random things keep happening to you. <i>The face drawing on the right</i> pretty much sums up my frustration. 
+                    On the left I decided to study muscle anatomy <i>(top left)</i> along as physical perspective. I got very frusturated during the process that I wanted to fucking flip the table. Incredibly annoying when your so hyperfocused and random things keep happening to you. <i>The face drawing on the right</i> pretty much sums up my frustration. </P>
                                       
          <img src= "chezeef.github.io/chezeef.com imgs/IMG_0039 (2).jpg"
           width="400"
