--- a/intex.html
+++ b/intex.html
@@ -17,7 +17,7 @@
                                                                         
             This is a page of my sketchbook. Currently I was feeling very frusturated on how facial expressions were, <i>(bottom left)</i> so I tried to practice them. They dont looks so bad, but I will practice more on angles and realistic expressions. I also want to tackle more shading projects and textures, so that drawings likes <i>(on the right)</i> will look more organic.</P>
     </body>
-        <img src= "/chezeef.com imgs/day 0 doodl.jpg" 
+        <img src= "/chezeef.com imgs/day 0 doodl.jpg" style="transform:rotate(270deg);"
         width="400" 
         height="500"/>
         
