--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name+"viewport" content="width=device-width," initial scale=1">
         <title>Welcome to Chezeef</title>
-         <link rel="stylesheet" type="text/css" href="style.css"  />                                                                    
+         <link rel="stylesheet" type="text/css" href="chezeef.github.io/style.css"  />                                                                    
     </head>
     <body>
 
