--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
          <img src= "chezeef.github.io/chezeef.com imgs/green keyboard.jpg"
              width="1917"
              height="758"/>
-       <div/>                  
-                      
+       <div/>      
+                      <div>   
+                     <br><H3><P><i>1/12/22</i></H3>
+                    Theres no reason why making a short fil is so hard. Why cant it be easy. Or maybe im just <i>really</i> tired right now. Dammit highly processed foods, yall got me again. Anyways I almost broke my keyboard again, its cool tho. No pic today. I dont have a phone camera because my phone is broke and im not sure when I can fix it. Ipad gang where you at. Anywyas ill add a anon commenting feature soon so i can get bullied. TTYL!!
+           
+                      <div/>
 </html>
 
