--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
                       <div>   
                      <br><H3><P><i>1/12/22</i></H3>
                     Theres no reason why making a short fil is so hard. Why cant it be easy. Or maybe im just <i>really</i> tired right now. Dammit highly processed foods, yall got me again. Anyways I almost broke my keyboard again, its cool tho. No pic today. I dont have a phone camera because my phone is broke and im not sure when I can fix it. Ipad gang where you at. Anywyas ill add a anon commenting feature soon so i can get bullied. TTYL!!
-           
+                    
                       <div/>
-</html>
+                      <div>   
+                    <br><H3><P><i>1/20/22</i></H3> 
+                    Ahh my bad. Well I havent updated this in about, 8 days. Well see, Ive been having trouble with applying css into this html website, and im not sure githubs really feeling it with me. Ill fix it tho, youtuve tutorials and stackoverflow are of course the backbone of this. Anyways, Ive been feeling pretty good, just my head is killing me, and it makes it difficult to focus.      
+                       <div/>
+ </html>
 
