--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                             
                         <br><H3><P><i>2/1/22</i></H3> 
                         Its been weeks. I think ill try to update at least once a week. Im still wondering what to make out of this website. I guess ill just use it to dump all my "creative" farts. Anyways I went to go watch <i>BELLE<i/> last week, and gosh was it amazing. The visuals, characters, plot, was all a A. Although the villan was kind of hard to like, possibly due to the dubs voice, it wasnt to the point they were it was unbearable. Anyways, The Fallout was also good, just not great.     
+                        
+                        <br><H3><P><i>6/18/22</i></H3>
+                        Dont worry im alive. Its summer now. I wont make any promises toward chezeef.com's developement. My only hopes are that its prettier by the end of this. 
             </div>    
         </div>                
     </body>                
