--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>velocity</title>
+    <title>cheezeeee hub</title>
     <style>
         * {
             margin: 0;
@@ -13,7 +13,7 @@
         
         body {
             font-family: 'Comic Sans MS', 'Comic Sans', cursive;
-            background-color: #ffffff;
+            background-color: #f5f1eb;
             color: #3a3a3a;
             line-height: 1.6;
         }
@@ -234,16 +234,16 @@
     <nav>
         <div class="logo">V</div>
         <ul>
-            <li><a href="#work">work</a></li>
+            <li><a href="#work">stuff</a></li>
             <li><a href="#about">about</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="#contact">reach out</a></li>
         </ul>
     </nav>
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>velocity</h1>
-        <p>creative work in motion</p>
+        <h1>stuff</h1>
+        <p>random 'projects'</p>
     </section>
 
     <!-- Portfolio Section -->
@@ -277,26 +277,26 @@
     <section id="about">
         <h2>about</h2>
         <div class="about-content">
-            <p>Hi, I'm [Your Name]. I create [type of work] that explores [themes/interests]. Based in [location], I'm passionate about [what drives your work]. When I'm not creating, you'll find me [hobby/interest].</p>
+            <p>hello. cheeze here. i do engineering-related projects, art, and go on the occasional adventure. enjoy your stay!</p>
         </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact">
-        <h2>get in touch</h2>
+        <h2>talk 2 meee</h2>
         <div class="contact-content">
-            <p>Let's work together or just chat about creative ideas.</p>
+            <p>if you have anything to say... -comments, questions, or concerns-</p>
             <div class="contact-links">
-                <a href="mailto:your@email.com">email</a>
-                <a href="https://instagram.com/yourhandle" target="_blank">instagram</a>
-                <a href="https://twitter.com/yourhandle" target="_blank">twitter</a>
+                <a href="psnchels@yahoo.com">email</a>
+                <a href="https://instagram.com/realCheezd" target="_blank">insta</a>
+                <a href="https://twitter.com" target="_blank">twitter-na-</a>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 velocity — built with care</p>
+        <p>© 2025 Cheeze — keep it cheezee</p>
     </footer>
 
     <script>
