--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <div class="logo">V</div>
+        <div class="logo">chezeef.com</div>
         <ul>
             <li><a href="#work">stuff</a></li>
             <li><a href="#about">about</a></li>
