--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <h2>talk 2 meee</h2>
         <p>if you have anything to say... -comments, questions, or concerns-</p>
         <p><a href="mailto:psnchels@yahoo.com">email</a></p>
-        <p><a href="https://instagram.com/realCheezd">insta</a></p>
+        <p><a href="https://instagram.com/realCheeezd">insta</a></p>
     </section>
 
     <footer>
