--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     
     <div class="ticker-container">
         <div class="ticker">
-            <div class="ticker-item">Project 1</div>
+            <div class="ticker-item"><img src="img1.png"></div>
             <div class="ticker-item">Project 2</div>
             <div class="ticker-item">Project 3</div>
             <div class="ticker-item">Project 4</div>
