--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
         <a href="#contact">reach out</a>
     </nav>
 
-    <h1>stuff</h1>
+    <h1>depot</h1>
     <p class="subtitle">random 'projects'</p>
     
     <div class="ticker-container">
         <div class="ticker">
             <div class="ticker-item"><img src="img1.png"></div>
-            <div class="ticker-item">Project 2</div>
-            <div class="ticker-item">Project 3</div>
-            <div class="ticker-item">Project 4</div>
+            <div class="ticker-item"><img src="img2.png"></div>
+            <div class="ticker-item"><img src="img4.png"></div>
+            <div class="ticker-item"><img src="img5.png"></div>
             <div class="ticker-item">Project 5</div>
             <div class="ticker-item">Project 1</div>
             <div class="ticker-item">Project 2</div>
